<resources>
    <string name="app_name">HelloSQLite TEMPLATE</string>

    <string name="instruction_product_to_search">Name to search</string>
    <string name="button_search_for_product">Search</string>
    <string name="all_products">All products</string>
    <string name="button_add_product">Add product</string>
    <string name="label_product_name">New product name</string>
    <string name="label_product_quantity">New product quantity</string>
    <string name="button_update_quantity">Update quantity</string>
    <string name="instruction_product_quantity_update">Update quantity</string>


</resources>
