<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clara.hellosqlite.ProductsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/controls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/add_new_product_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_name" />


            <EditText
                android:id="@+id/add_new_product_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/add_new_product_quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_quantity" />

            <EditText
                android:id="@+id/add_new_product_quantity_et"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/add_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_product" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction_product_to_search" />

            <EditText
                android:id="@+id/search_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/search_products_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_search_for_product" />

            <EditText
                android:id="@+id/update_quantity_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/update_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_update_quantity" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_products" />

    </LinearLayout>

    <ListView
        android:id="@+id/all_products_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/controls"/>


</RelativeLayout>
